--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title_separator          : "-"
 name                     : &name "Aaron Zhang"
 description              : &description "Hi there! I'm Aaron Zhang, a Class of 2025 student at the University of Chicago studying Economics and Data Science."
 url                      : "https://dcm9.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/aaronz_personal_website" # the subpath of your site, e.g. "/blog"
 repository               : "https://dcm9.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
