--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Aaron's Personal Website & Portfolio"
 title_separator          : "-"
 name                     : &name "Aaron Zhang"
 description              : &description "Hi there! I'm Aaron Zhang, a Class of 2025 student at the University of Chicago studying Economics and Data Science."
-url                      : "https://dcm9.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://dcm9.github.io/aaronz_personal_website" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://dcm9.github.io/aaronz_personal_website"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
